--- a/~!.emacs.d/core.org
+++ b/~!.emacs.d/core.org
@@ -44,104 +44,126 @@ resets `file-name-handler-alist'."
 ** Personal Info
 
 #+begin_src emacs-lisp
-     (setq user-full-name "Xiaoxing Hu"
-           user-mail-address "xiaoxing@huxx.org")
+(setq user-full-name "Xiaoxing Hu"
+      user-mail-address "xiaoxing@huxx.org")
 
-     (defconst EMACS26+ (> emacs-major-version 25))
-     (defconst IS-MAC     (eq system-type 'darwin))
-     (defconst IS-LINUX   (eq system-type 'gnu/linux))
-     (defconst IS-WINDOWS (memq system-type '(cygwin windows-nt ms-dos)))
-
+(defconst EMACS26+ (> emacs-major-version 25))
+(defconst IS-MAC     (eq system-type 'darwin))
+(defconst IS-LINUX   (eq system-type 'gnu/linux))
+(defconst IS-WINDOWS (memq system-type '(cygwin windows-nt ms-dos)))
 #+end_src
 
 ** Folders
+
+Get the ~/.emacs.d dir right.
 #+begin_src emacs-lisp
 (defvar x/emacs-dir
   (eval-when-compile (file-truename user-emacs-directory))
   "The path to the currently loaded .emacs.d directory. Must end with a slash.")
+#+end_src
 
+This is where all the code will be tangled.
+#+begin_src emacs-lisp
 (defvar x/lisp-dir (concat x/emacs-dir ".lisp/")
   "The root directory of Doom's core files. Must end with a slash.")
+#+end_src
 
+.local
+#+begin_src emacs-lisp
 (defvar x/local-dir (expand-file-name ".local/" user-emacs-directory)
   "Root directory for local Emacs files.
      Use this as permanent storage for files
      that are safe to share across systems (if this config is symlinked across
      several computers).")
+#+end_src
+
+#+begin_src emacs-lisp
 (defvar x/packages-dir (concat x/local-dir "packages/")
   "Where package.el and quelpa plugins (and their caches) are stored.")
+#+end_src
 
+#+begin_src emacs-lisp
 (defvar x/cache-dir (concat x/local-dir "cache/")
   "Directory for volatile storage.
 
      Use this for files that change often, like cache files.")
+#+end_src
 
+#+begin_src emacs-lisp
 (defvar x/etc-dir (concat x/local-dir "etc/")
   "Directory for non-volatile storage.
 
      Use this for files that don't change much, like servers binaries, external
      dependencies or long-term shared data.")
+#+end_src
 
+#+begin_src emacs-lisp
 (defvar x/var-dir (concat x/local-dir "var/")
   "Directory for volatile storage.")
-
 (make-directory x/local-dir :parents)
-(setq custom-file (concat x/local-dir "custom.el"))
+#+end_src
 
+Set the =custom.el= file.
+#+begin_src emacs-lisp
+(setq custom-file (concat x/local-dir "custom.el"))
+#+end_src
+
+Put =x/lisp-dir= to load-path.
+#+begin_src emacs-lisp
 (push x/lisp-dir load-path)
 #+end_src
 
 ** Files
 
 #+begin_src emacs-lisp
-     (setq-default
-       abbrev-file-name             (concat x/local-dir "abbrev.el")
-       auto-save-list-file-name     (concat x/cache-dir "autosave")
-       backup-directory-alist       (list (cons "." (concat x/cache-dir "backup/")))
-       pcache-directory             (concat x/cache-dir "pcache/")
-       request-storage-directory    (concat x/cache-dir "request")
-       server-auth-dir              (concat x/cache-dir "server/")
-       shared-game-score-directory  (concat x/etc-dir "shared-game-score/")
-       tramp-auto-save-directory    (concat x/cache-dir "tramp-auto-save/")
-       tramp-backup-directory-alist backup-directory-alist
-       tramp-persistency-file-name  (concat x/cache-dir "tramp-persistency.el")
-       url-cache-directory          (concat x/cache-dir "url/")
-       url-configuration-directory  (concat x/etc-dir "url/")
-       gamegrid-user-score-file-directory (concat x/etc-dir "games/"))
+(setq-default
+ abbrev-file-name             (concat x/local-dir "abbrev.el")
+ auto-save-list-file-name     (concat x/cache-dir "autosave")
+ backup-directory-alist       (list (cons "." (concat x/cache-dir "backup/")))
+ pcache-directory             (concat x/cache-dir "pcache/")
+ request-storage-directory    (concat x/cache-dir "request")
+ server-auth-dir              (concat x/cache-dir "server/")
+ shared-game-score-directory  (concat x/etc-dir "shared-game-score/")
+ tramp-auto-save-directory    (concat x/cache-dir "tramp-auto-save/")
+ tramp-backup-directory-alist backup-directory-alist
+ tramp-persistency-file-name  (concat x/cache-dir "tramp-persistency.el")
+ url-cache-directory          (concat x/cache-dir "url/")
+ url-configuration-directory  (concat x/etc-dir "url/")
+ gamegrid-user-score-file-directory (concat x/etc-dir "games/"))
 #+end_src
+
 ** Sane Defaults
 UTF-8 as the default coding system
 #+begin_src emacs-lisp
-     ;; UTF-8 as the default coding system
-     (when (fboundp 'set-charset-priority)
-       (set-charset-priority 'unicode))     ; pretty
-     (prefer-coding-system        'utf-8)   ; pretty
-     (set-terminal-coding-system  'utf-8)   ; pretty
-     (set-keyboard-coding-system  'utf-8)   ; pretty
-     (set-selection-coding-system 'utf-8)   ; perdy
-     (setq locale-coding-system   'utf-8)   ; please
-     (setq-default buffer-file-coding-system 'utf-8) ; with sugar on top
+(when (fboundp 'set-charset-priority)
+  (set-charset-priority 'unicode))     ; pretty
+(prefer-coding-system        'utf-8)   ; pretty
+(set-terminal-coding-system  'utf-8)   ; pretty
+(set-keyboard-coding-system  'utf-8)   ; pretty
+(set-selection-coding-system 'utf-8)   ; perdy
+(setq locale-coding-system   'utf-8)   ; please
+(setq-default buffer-file-coding-system 'utf-8) ; with sugar on top
 #+end_src
 
 Other defaults.
 
 #+begin_src emacs-lisp
-     (setq-default
-      ;; be quiet at startup; don't load or display anything unnecessary
-      inhibit-startup-message t
-      inhibit-startup-echo-area-message user-login-name
-      inhibit-default-init t
-      initial-major-mode 'fundamental-mode
-      initial-scratch-message nil
-      find-file-visit-truename t       ; resolve symlinks when opening files
-      ;; History & backup settings (save nothing, that's what git is for)
-      auto-save-default nil
-      create-lockfiles nil
-      history-length 500
-      make-backup-files nil  ; don't create backup~ files
-      ;; Don't store authinfo in plain text!
-      auth-sources (list (expand-file-name "authinfo.gpg" x/etc-dir)
-                         "~/.authinfo.gpg"))
+(setq-default
+ ;; be quiet at startup; don't load or display anything unnecessary
+ inhibit-startup-message t
+ inhibit-startup-echo-area-message user-login-name
+ inhibit-default-init t
+ initial-major-mode 'fundamental-mode
+ initial-scratch-message nil
+ find-file-visit-truename t       ; resolve symlinks when opening files
+ ;; History & backup settings (save nothing, that's what git is for)
+ auto-save-default nil
+ create-lockfiles nil
+ history-length 500
+ make-backup-files nil  ; don't create backup~ files
+ ;; Don't store authinfo in plain text!
+ auth-sources (list (expand-file-name "authinfo.gpg" x/etc-dir)
+                    "~/.authinfo.gpg"))
 #+end_src
 
 ** Initialize The Core
@@ -152,7 +174,6 @@ Other defaults.
   (require 'core-packages)
   (require 'core-keys))
 #+end_src
-
 
 * Packages
 :PROPERTIES:
@@ -234,160 +255,158 @@ Provide the package.
 (provide 'core-packages)
 #+end_src
 
-
 * Keys
 :PROPERTIES:
 :header-args: :tangle (concat x/lisp-dir "core-keys.el") :mkdirp yes
 :END:
 
 ** Fix the Escape
-   #+begin_src emacs-lisp
-     (defvar doom-escape-hook nil
-       "A hook run after C-g is pressed (or ESC in normal mode, for evil users). Both
-     trigger `doom/escape'.
+#+begin_src emacs-lisp
+(defvar doom-escape-hook nil
+  "A hook run after C-g is pressed (or ESC in normal mode, for evil users). Both
+trigger `doom/escape'.
 
-     If any hook returns non-nil, all hooks after it are ignored.")
+If any hook returns non-nil, all hooks after it are ignored.")
 
-     (defun doom/escape ()
-       "Run the `doom-escape-hook'."
-       (interactive)
-       (cond ((minibuffer-window-active-p (minibuffer-window))
-              ;; quit the minibuffer if open.
-              (abort-recursive-edit))
-             ;; Run all escape hooks. If any returns non-nil, then stop there.
-             ((cl-find-if #'funcall doom-escape-hook))
-             ;; don't abort macros
-             ((or defining-kbd-macro executing-kbd-macro) nil)
-             ;; Back to the default
-             ((keyboard-quit))))
+(defun doom/escape ()
+  "Run the `doom-escape-hook'."
+  (interactive)
+  (cond ((minibuffer-window-active-p (minibuffer-window))
+         ;; quit the minibuffer if open.
+         (abort-recursive-edit))
+        ;; Run all escape hooks. If any returns non-nil, then stop there.
+        ((cl-find-if #'funcall doom-escape-hook))
+        ;; don't abort macros
+        ((or defining-kbd-macro executing-kbd-macro) nil)
+        ;; Back to the default
+        ((keyboard-quit))))
 
-     (global-set-key [remap keyboard-quit] #'doom/escape)
-   #+end_src
+(global-set-key [remap keyboard-quit] #'doom/escape)
+#+end_src
 
 ** general
-   #+begin_src emacs-lisp
-     (use-package general
-       :config
-       (general-evil-setup)
-       (general-create-definer map!
-         :states '(normal visual insert emacs)
-         :prefix "SPC"
-         :non-normal-prefix "C-SPC")
+#+begin_src emacs-lisp
+(use-package general
+  :config
+  (general-evil-setup)
+  (general-create-definer map!
+    :states '(normal visual insert emacs)
+    :prefix "SPC"
+    :non-normal-prefix "C-SPC")
 
-       (general-create-definer map|local
-         :states '(normal visual insert emacs)
-         :prefix "SPC m"
-         :non-normal-prefix "C-SPC m")
+  (general-create-definer map|local
+    :states '(normal visual insert emacs)
+    :prefix "SPC m"
+    :non-normal-prefix "C-SPC m")
 
-       (general-create-definer map|open
-         :states '(normal visual insert emacs)
-         :prefix "SPC o"
-         :non-normal-prefix "C-SPC o")
+  (general-create-definer map|open
+    :states '(normal visual insert emacs)
+    :prefix "SPC o"
+    :non-normal-prefix "C-SPC o")
 
-       (map!
-         ;; simple command
-         "u"   '(universal-argument :which-key "Universal argument")
-         "'"   '(iterm-focus :which-key "iterm")
-         "?"   '(iterm-goto-filedir-or-home :which-key "iterm - goto dir")
-         "TAB" '(x|switch-to-other-buffer :which-key "prev buffer")
+  (map!
+    ;; simple command
+    "u"   '(universal-argument :which-key "Universal argument")
+    "'"   '(iterm-focus :which-key "iterm")
+    "?"   '(iterm-goto-filedir-or-home :which-key "iterm - goto dir")
+    "TAB" '(x|switch-to-other-buffer :which-key "prev buffer")
 
-         ;; Applications
-         "m" '(:ignore t :which-key "Major")
-         "a" '(:ignore t :which-key "Applications")
-         "o" '(:ignore t :which-key "Open")
-         "ar" 'ranger
-         "ad" 'dired
-         "q" '(:ignore t :which-key "Quit")
-         "qq" 'save-buffers-kill-terminal
+    ;; Applications
+    "m" '(:ignore t :which-key "Major")
+    "a" '(:ignore t :which-key "Applications")
+    "o" '(:ignore t :which-key "Open")
+    "ar" 'ranger
+    "ad" 'dired
+    "q" '(:ignore t :which-key "Quit")
+    "qq" 'save-buffers-kill-terminal
 
-         ;; Help
-         "h" '(:ignore t :which-key "Help")
-         "hf" 'describe-function
-         "hv" 'describe-variable
-         "hk" 'describe-key
-         "hh" 'help-for-help
-         )
+    ;; Help
+    "h" '(:ignore t :which-key "Help")
+    "hf" 'describe-function
+    "hv" 'describe-variable
+    "hk" 'describe-key
+    "hh" 'help-for-help
+    )
 
-       ;; conventions
-       (general-define-key
-        :keymaps 'global ;; use to be override
-        "M-a" 'mark-whole-buffer
-        "M-s" 'save-buffer
-        "M-q" 'save-buffers-kill-terminal
-        "M-b" 'counsel-ibuffer
-        "M-w" 'delete-frame
-        "M-o" 'ranger
-        "M-p" 'counsel-projectile-find-file
-        "M-P" 'counsel-projectile-switch-project
-        "M-n" 'make-frame-command
-        "M-v" 'yank
-        "M-RET" 'toggle-frame-fullscreen)
+  ;; conventions
+  (general-define-key
+   :keymaps 'global ;; use to be override
+   "M-a" 'mark-whole-buffer
+   "M-s" 'save-buffer
+   "M-q" 'save-buffers-kill-terminal
+   "M-b" 'counsel-ibuffer
+   "M-w" 'delete-frame
+   "M-o" 'ranger
+   "M-p" 'counsel-projectile-find-file
+   "M-P" 'counsel-projectile-switch-project
+   "M-n" 'make-frame-command
+   "M-v" 'yank
+   "M-RET" 'toggle-frame-fullscreen)
 
-       (global-set-key (kbd "M-`") 'x|switch-to-other-buffer)
-       )
-   #+end_src
+  (global-set-key (kbd "M-`") 'x|switch-to-other-buffer)
+  )
+#+end_src
 
 ** hydra
-   #+begin_src emacs-lisp
-     (use-package hydra
-       ;; :bind (("s-b" . hydra-buffer/body))
-       :general
-       (map!
-         "b" 'hydra-buffer/body
-         "z" 'hydra-text-zoom/body)
-       :config
-       (hydra-add-font-lock)
+#+begin_src emacs-lisp
+(use-package hydra
+  ;; :bind (("s-b" . hydra-buffer/body))
+  :general
+  (map!
+    "b" 'hydra-buffer/body
+    "z" 'hydra-text-zoom/body)
+  :config
+  (hydra-add-font-lock)
 
-       (defhydra hydra-buffer ()
-         "buffer"
-         ("b" counsel-ibuffer "buffers" :exit t)
-         ("x" kill-this-buffer "kill buffer" :exit t)
-         ("m" buffer-menu "buffer-menu" :exit t)
-         ("h" switch-to-prev-buffer "prev")
-         ("l" switch-to-next-buffer "next"))
+  (defhydra hydra-buffer ()
+    "buffer"
+    ("b" counsel-ibuffer "buffers" :exit t)
+    ("x" kill-this-buffer "kill buffer" :exit t)
+    ("m" buffer-menu "buffer-menu" :exit t)
+    ("h" switch-to-prev-buffer "prev")
+    ("l" switch-to-next-buffer "next"))
 
-       (defhydra hydra-text-zoom (:hint t :color red)
-         "
-           Text zoom: _j_:zoom in, _k_:zoom out, _0_:reset
-     "
-         ("j" text-scale-increase "in")
-         ("k" text-scale-decrease "out")
-         ("0" (text-scale-set 0) "reset"))
+  (defhydra hydra-text-zoom (:hint t :color red)
+    "
+      Text zoom: _j_:zoom in, _k_:zoom out, _0_:reset
+"
+    ("j" text-scale-increase "in")
+    ("k" text-scale-decrease "out")
+    ("0" (text-scale-set 0) "reset"))
 
-       (defhydra hydra-buffer-menu (:color pink
-                                    :hint nil)
-         "
-     ^Mark^             ^Unmark^           ^Actions^          ^Search
-     ^^^^^^^^-----------------------------------------------------------------                        (__)
-     _m_: mark          _u_: unmark        _x_: execute       _R_: re-isearch                         (oo)
-     _s_: save          _U_: unmark up     _b_: bury          _I_: isearch                      /------\\/
-     _d_: delete        ^ ^                _g_: refresh       _O_: multi-occur                 / |    ||
-     _D_: delete up     ^ ^                _T_: files only: % -28`Buffer-menu-files-only^^    *  /\\---/\\
-     _~_: modified      ^ ^                ^ ^                ^^                                 ~~   ~~
-     "
-         ("m" Buffer-menu-mark)
-         ("u" Buffer-menu-unmark)
-         ("U" Buffer-menu-backup-unmark)
-         ("d" Buffer-menu-delete)
-         ("D" Buffer-menu-delete-backwards)
-         ("s" Buffer-menu-save)
-         ("~" Buffer-menu-not-modified)
-         ("x" Buffer-menu-execute)
-         ("b" Buffer-menu-bury)
-         ("g" revert-buffer)
-         ("T" Buffer-menu-toggle-files-only)
-         ("O" Buffer-menu-multi-occur :color blue)
-         ("I" Buffer-menu-isearch-buffers :color blue)
-         ("R" Buffer-menu-isearch-buffers-regexp :color blue)
-         ("c" nil "cancel")
-         ("v" Buffer-menu-select "select" :color blue)
-         ("o" Buffer-menu-other-window "other-window" :color blue)
-         ("q" quit-window "quit" :color blue))
+  (defhydra hydra-buffer-menu (:color pink
+                               :hint nil)
+    "
+^Mark^             ^Unmark^           ^Actions^          ^Search
+^^^^^^^^-----------------------------------------------------------------                        (__)
+_m_: mark          _u_: unmark        _x_: execute       _R_: re-isearch                         (oo)
+_s_: save          _U_: unmark up     _b_: bury          _I_: isearch                      /------\\/
+_d_: delete        ^ ^                _g_: refresh       _O_: multi-occur                 / |    ||
+_D_: delete up     ^ ^                _T_: files only: % -28`Buffer-menu-files-only^^    *  /\\---/\\
+_~_: modified      ^ ^                ^ ^                ^^                                 ~~   ~~
+"
+    ("m" Buffer-menu-mark)
+    ("u" Buffer-menu-unmark)
+    ("U" Buffer-menu-backup-unmark)
+    ("d" Buffer-menu-delete)
+    ("D" Buffer-menu-delete-backwards)
+    ("s" Buffer-menu-save)
+    ("~" Buffer-menu-not-modified)
+    ("x" Buffer-menu-execute)
+    ("b" Buffer-menu-bury)
+    ("g" revert-buffer)
+    ("T" Buffer-menu-toggle-files-only)
+    ("O" Buffer-menu-multi-occur :color blue)
+    ("I" Buffer-menu-isearch-buffers :color blue)
+    ("R" Buffer-menu-isearch-buffers-regexp :color blue)
+    ("c" nil "cancel")
+    ("v" Buffer-menu-select "select" :color blue)
+    ("o" Buffer-menu-other-window "other-window" :color blue)
+    ("q" quit-window "quit" :color blue))
 
-       (define-key Buffer-menu-mode-map "." 'hydra-buffer-menu/body)
-       )
-   #+end_src
-
+  (define-key Buffer-menu-mode-map "." 'hydra-buffer-menu/body)
+  )
+#+end_src
 
 ** Provide the Package
 #+begin_src emacs-lisp
